--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   lottie:
   font_awesome_flutter:
   syncfusion_flutter_calendar: 19.4.50
+  url_launcher:
+  flutter_speed_dial:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
