--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,9 @@ dependencies:
   flutter_local_notifications:
   rxdart:
   flutter_native_timezone:
-  
+  percent_indicator: ^3.4.0
+  cloud_firestore:
+  firebase_core:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
