--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_fonts: 2.2.0
   animated_splash_screen:
   intl:
+  flutter_svg:
   lottie:
   font_awesome_flutter:
   syncfusion_flutter_calendar: 19.4.50
