--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
     sdk: flutter
   provider:
   path:
+  path_provider:
+  open_file:
   shared_preferences:
   google_fonts: 2.2.0
   animated_splash_screen:
@@ -40,6 +42,8 @@ dependencies:
   font_awesome_flutter:
   syncfusion_flutter_calendar: 19.4.50
   syncfusion_flutter_charts:
+  syncfusion_flutter_pdf:
+  syncfusion_flutter_signaturepad:
   url_launcher:
   flutter_speed_dial:
   animations:
